# MLOps-with-Agentic-AI_212504-latest

./: README.md  pyproject.toml
clustering_13-12-2025/: bias_variance.ipynb  pr.html  precision_recall_accuracy.ipynb  unsupervised_learning.ipynb
clustering_14-12-2025/: advance_clustering.ipynb
data_processing/: create_fault_values.py  data_filling_advanced.py  data_filling_imputer.py  data_filling_manual.py  data_knn_imputed.csv  data_l2_normalized.csv  data_log_transformed.csv  data_mice_imputed.csv  data_minmax_scaled.csv  data_sqrt_transformed.csv  data_standard_scaled.csv  data_transform.py  data_transform_advanced.py  feature_encoding.py  feature_engineering.py  feature_selection.py  generate_numpy.py  generate_synthetic_data.py  missing-data-imputation-visualization.ipynb  model_supervised.ipynb  model_unsupervised.ipynb  outlier_detection.py  preprocessing.ipynb  synthetic_regression_data.csv
ensemble_20-12-2025/: ensemble_methods_comparison.ipynb
project_27-12-2025/: steps.txt  zilliz.ipynb
